Button still overlapping but fixed because it was dividing the space in half

--- a/app/assets/stylesheets/home.css.scss
+++ b/app/assets/stylesheets/home.css.scss
@@ -4,7 +4,7 @@
 
 .mega-header{
   height: 100%;
-  min-height: 570px;
+  min-height: 600px;
   color: white;
   padding: 100px 0px;
   position: relative;
